Wrap command arguments