@@ -11,20 +11,22 @@ import org.popcraft.chunky.util.Input;
 import org.popcraft.chunky.util.TranslationKey;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.popcraft.chunky.util.Translator.translate;
 
-public class StartCommand extends ChunkyCommand {
+public class StartCommand implements ChunkyCommand {
+    private final Chunky chunky;
+
     public StartCommand(final Chunky chunky) {
-        super(chunky);
+        this.chunky = chunky;
     }
 
-    public void execute(final Sender sender, final String[] args) {
-        if (args.length > 1) {
-            final Optional<World> world = Input.tryWorld(chunky, args[1]);
+    @Override
+    public void execute(final Sender sender, final CommandArguments arguments) {
+        if (arguments.size() > 0) {
+            final Optional<World> world = arguments.next().flatMap(arg -> Input.tryWorld(chunky, arg));
             if (world.isPresent()) {
                 chunky.getSelection().world(world.get());
             } else {
@@ -32,8 +34,8 @@ public class StartCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 2) {
-            final Optional<String> shape = Input.tryShape(args[2]);
+        if (arguments.size() > 1) {
+            final Optional<String> shape = arguments.next().flatMap(Input::tryShape);
             if (shape.isPresent()) {
                 chunky.getSelection().shape(shape.get());
             } else {
@@ -41,9 +43,9 @@ public class StartCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 3) {
-            final Optional<Double> centerX = Input.tryDoubleSuffixed(args[3]).filter(cx -> !Input.isPastWorldLimit(cx));
-            final Optional<Double> centerZ = Input.tryDoubleSuffixed(args.length > 4 ? args[4] : null).filter(cz -> !Input.isPastWorldLimit(cz));
+        if (arguments.size() > 2) {
+            final Optional<Double> centerX = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(c -> !Input.isPastWorldLimit(c));
+            final Optional<Double> centerZ = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(c -> !Input.isPastWorldLimit(c));
             if (centerX.isPresent() && centerZ.isPresent()) {
                 chunky.getSelection().center(centerX.get(), centerZ.get());
             } else {
@@ -51,8 +53,8 @@ public class StartCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 5) {
-            final Optional<Double> radiusX = Input.tryDoubleSuffixed(args[5]).filter(rx -> rx >= 0 && !Input.isPastWorldLimit(rx));
+        if (arguments.size() > 4) {
+            final Optional<Double> radiusX = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(r -> r >= 0 && !Input.isPastWorldLimit(r));
             if (radiusX.isPresent()) {
                 chunky.getSelection().radius(radiusX.get());
             } else {
@@ -60,8 +62,8 @@ public class StartCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 6) {
-            final Optional<Double> radiusZ = Input.tryDoubleSuffixed(args[6]).filter(rz -> rz >= 0 && !Input.isPastWorldLimit(rz));
+        if (arguments.size() > 5) {
+            final Optional<Double> radiusZ = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(r -> r >= 0 && !Input.isPastWorldLimit(r));
             if (radiusZ.isPresent()) {
                 chunky.getSelection().radiusZ(radiusZ.get());
             } else {
@@ -93,14 +95,14 @@ public class StartCommand extends ChunkyCommand {
     }
 
     @Override
-    public List<String> tabSuggestions(final String[] args) {
-        if (args.length == 2) {
+    public List<String> tabSuggestions(final CommandArguments arguments) {
+        if (arguments.size() == 1) {
             final List<String> suggestions = new ArrayList<>();
             chunky.getServer().getWorlds().forEach(world -> suggestions.add(world.getName()));
             return suggestions;
-        } else if (args.length == 3) {
+        } else if (arguments.size() == 2) {
             return ShapeType.ALL;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
