@@ -17,7 +17,6 @@ import java.io.RandomAccessFile;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
@@ -25,15 +24,17 @@ import java.util.stream.Stream;
 
 import static org.popcraft.chunky.util.Translator.translate;
 
-public class TrimCommand extends ChunkyCommand {
+public class TrimCommand implements ChunkyCommand {
+    private final Chunky chunky;
+
     public TrimCommand(final Chunky chunky) {
-        super(chunky);
+        this.chunky = chunky;
     }
 
     @Override
-    public void execute(final Sender sender, final String[] args) {
-        if (args.length > 1) {
-            final Optional<World> world = Input.tryWorld(chunky, args[1]);
+    public void execute(final Sender sender, final CommandArguments arguments) {
+        if (arguments.size() > 0) {
+            final Optional<World> world = arguments.next().flatMap(arg -> Input.tryWorld(chunky, arg));
             if (world.isPresent()) {
                 chunky.getSelection().world(world.get());
             } else {
@@ -41,8 +42,8 @@ public class TrimCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 2) {
-            final Optional<String> shape = Input.tryShape(args[2]);
+        if (arguments.size() > 1) {
+            final Optional<String> shape = arguments.next().flatMap(Input::tryShape);
             if (shape.isPresent()) {
                 chunky.getSelection().shape(shape.get());
             } else {
@@ -50,9 +51,9 @@ public class TrimCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 3) {
-            final Optional<Double> centerX = Input.tryDoubleSuffixed(args[3]).filter(cx -> !Input.isPastWorldLimit(cx));
-            final Optional<Double> centerZ = Input.tryDoubleSuffixed(args.length > 4 ? args[4] : null).filter(cz -> !Input.isPastWorldLimit(cz));
+        if (arguments.size() > 2) {
+            final Optional<Double> centerX = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(c -> !Input.isPastWorldLimit(c));
+            final Optional<Double> centerZ = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(c -> !Input.isPastWorldLimit(c));
             if (centerX.isPresent() && centerZ.isPresent()) {
                 chunky.getSelection().center(centerX.get(), centerZ.get());
             } else {
@@ -60,8 +61,8 @@ public class TrimCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 5) {
-            final Optional<Double> radiusX = Input.tryDoubleSuffixed(args[5]).filter(rx -> rx >= 0 && !Input.isPastWorldLimit(rx));
+        if (arguments.size() > 4) {
+            final Optional<Double> radiusX = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(r -> r >= 0 && !Input.isPastWorldLimit(r));
             if (radiusX.isPresent()) {
                 chunky.getSelection().radius(radiusX.get());
             } else {
@@ -69,8 +70,8 @@ public class TrimCommand extends ChunkyCommand {
                 return;
             }
         }
-        if (args.length > 6) {
-            final Optional<Double> radiusZ = Input.tryDoubleSuffixed(args[6]).filter(rz -> rz >= 0 && !Input.isPastWorldLimit(rz));
+        if (arguments.size() > 5) {
+            final Optional<Double> radiusZ = arguments.next().flatMap(Input::tryDoubleSuffixed).filter(r -> r >= 0 && !Input.isPastWorldLimit(r));
             if (radiusZ.isPresent()) {
                 chunky.getSelection().radiusZ(radiusZ.get());
             } else {
@@ -197,14 +198,14 @@ public class TrimCommand extends ChunkyCommand {
     }
 
     @Override
-    public List<String> tabSuggestions(final String[] args) {
-        if (args.length == 2) {
+    public List<String> tabSuggestions(final CommandArguments arguments) {
+        if (arguments.size() == 1) {
             final List<String> suggestions = new ArrayList<>();
             chunky.getServer().getWorlds().forEach(world -> suggestions.add(world.getName()));
             return suggestions;
-        } else if (args.length == 3) {
+        } else if (arguments.size() == 2) {
             return ShapeType.ALL;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
