@@ -7,22 +7,19 @@ import org.popcraft.chunky.util.Input;
 import org.popcraft.chunky.util.TranslationKey;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-public class WorldCommand extends ChunkyCommand {
+public class WorldCommand implements ChunkyCommand {
+    private final Chunky chunky;
+
     public WorldCommand(final Chunky chunky) {
-        super(chunky);
+        this.chunky = chunky;
     }
 
-    public void execute(final Sender sender, final String[] args) {
-        if (args.length < 2) {
-            sender.sendMessage(TranslationKey.HELP_WORLD);
-            return;
-        }
-        final Optional<World> newWorld = Input.tryWorld(chunky, String.join(" ", Arrays.copyOfRange(args, 1, args.length)));
+    @Override
+    public void execute(final Sender sender, final CommandArguments arguments) {
+        final Optional<World> newWorld = Input.tryWorld(chunky, arguments.joined());
         if (newWorld.isEmpty()) {
             sender.sendMessage(TranslationKey.HELP_WORLD);
             return;
@@ -32,12 +29,12 @@ public class WorldCommand extends ChunkyCommand {
     }
 
     @Override
-    public List<String> tabSuggestions(final String[] args) {
-        if (args.length == 2) {
+    public List<String> tabSuggestions(final CommandArguments arguments) {
+        if (arguments.size() == 1) {
             final List<String> suggestions = new ArrayList<>();
             chunky.getServer().getWorlds().forEach(world -> suggestions.add(world.getName()));
             return suggestions;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
