@@ -7,13 +7,12 @@ import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 public final class Translator {
     private static final Map<String, String> fallbackTranslations;
-    private static Map<String, String> translations = Collections.emptyMap();
+    private static Map<String, String> translations = Map.of();
 
     static {
         fallbackTranslations = load("en");
@@ -63,6 +62,6 @@ public final class Translator {
                 e.printStackTrace();
             }
         }
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
