@@ -9,7 +9,6 @@ import org.popcraft.chunky.integration.Integration;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -26,7 +25,7 @@ public class FabricServer implements Server {
 
     @Override
     public Map<String, Integration> getIntegrations() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     @Override
