@@ -2,6 +2,7 @@ package org.popcraft.chunky;
 
 import com.google.inject.Inject;
 import org.apache.logging.log4j.Logger;
+import org.popcraft.chunky.command.CommandArguments;
 import org.popcraft.chunky.command.CommandLiteral;
 import org.popcraft.chunky.command.suggestion.SuggestionProviders;
 import org.popcraft.chunky.platform.SpongeConfig;
@@ -26,7 +27,6 @@ import org.spongepowered.plugin.builtin.jvm.Plugin;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 @Plugin("chunky")
@@ -50,7 +50,7 @@ public class ChunkySponge {
     public void onLoadedGame(final LoadedGameEvent event) {
         this.chunky = new Chunky(new SpongeServer(this), new SpongeConfig(this));
         if (chunky.getConfig().getContinueOnRestart()) {
-            chunky.getCommands().get(CommandLiteral.CONTINUE).execute(chunky.getServer().getConsole(), new String[]{});
+            chunky.getCommands().get(CommandLiteral.CONTINUE).execute(chunky.getServer().getConsole(), CommandArguments.empty());
         }
     }
 
@@ -69,7 +69,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.CANCEL);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.CANCEL, args);
                     return CommandResult.success();
@@ -84,7 +83,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.CENTER);
                     ctx.one(Parameter.key(CommandLiteral.X, String.class)).ifPresent(args::add);
                     ctx.one(Parameter.key(CommandLiteral.Z, String.class)).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.CENTER, args);
@@ -94,7 +92,7 @@ public class ChunkySponge {
         final Command.Parameterized confirmCommand = Command.builder()
                 .permission("chunky.command.confirm")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.CONFIRM, Collections.singletonList(CommandLiteral.CONFIRM));
+                    executeSpongeCommand(ctx, CommandLiteral.CONFIRM, List.of());
                     return CommandResult.success();
                 })
                 .build();
@@ -104,7 +102,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.CONTINUE);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.CONTINUE, args);
                     return CommandResult.success();
@@ -120,7 +117,6 @@ public class ChunkySponge {
                 )
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.CORNERS);
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.X1, String.class)));
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.Z1, String.class)));
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.X2, String.class)));
@@ -135,7 +131,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.HELP);
                     ctx.one(Parameter.key(CommandLiteral.PAGE, Integer.class)).map(String::valueOf).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.HELP, args);
                     return CommandResult.success();
@@ -149,7 +144,6 @@ public class ChunkySponge {
                 )
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.PATTERN);
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.PATTERN, String.class)));
                     ctx.one(Parameter.key(CommandLiteral.VALUE, String.class)).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.PATTERN, args);
@@ -162,7 +156,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.PAUSE);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.PAUSE, args);
                     return CommandResult.success();
@@ -171,7 +164,7 @@ public class ChunkySponge {
         final Command.Parameterized progressCommand = Command.builder()
                 .permission("chunky.command.progress")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.PROGRESS, Collections.singletonList(CommandLiteral.PROGRESS));
+                    executeSpongeCommand(ctx, CommandLiteral.PROGRESS, List.of());
                     return CommandResult.success();
                 })
                 .build();
@@ -180,7 +173,6 @@ public class ChunkySponge {
                 .addParameters(Parameter.integerNumber().key(CommandLiteral.INTERVAL).build())
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.QUIET);
                     args.add(String.valueOf(ctx.requireOne(Parameter.key(CommandLiteral.INTERVAL, Integer.class))));
                     executeSpongeCommand(ctx, CommandLiteral.QUIET, args);
                     return CommandResult.success();
@@ -194,7 +186,6 @@ public class ChunkySponge {
                 )
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.RADIUS);
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.RADIUS_X, String.class)));
                     ctx.one(Parameter.key(CommandLiteral.RADIUS_Z, String.class)).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.RADIUS, args);
@@ -204,7 +195,7 @@ public class ChunkySponge {
         final Command.Parameterized reloadCommand = Command.builder()
                 .permission("chunky.command.reload")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.RELOAD, Collections.singletonList(CommandLiteral.RELOAD));
+                    executeSpongeCommand(ctx, CommandLiteral.RELOAD, List.of());
                     return CommandResult.success();
                 })
                 .build();
@@ -213,7 +204,6 @@ public class ChunkySponge {
                 .addParameters(Parameter.string().key(CommandLiteral.SHAPE).completer(SuggestionProviders.SHAPES).build())
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.SHAPE);
                     args.add(ctx.requireOne(Parameter.key(CommandLiteral.SHAPE, String.class)));
                     executeSpongeCommand(ctx, CommandLiteral.SHAPE, args);
                     return CommandResult.success();
@@ -222,14 +212,14 @@ public class ChunkySponge {
         final Command.Parameterized silentCommand = Command.builder()
                 .permission("chunky.command.silent")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.SILENT, Collections.singletonList(CommandLiteral.SILENT));
+                    executeSpongeCommand(ctx, CommandLiteral.SILENT, List.of());
                     return CommandResult.success();
                 })
                 .build();
         final Command.Parameterized spawnCommand = Command.builder()
                 .permission("chunky.command.spawn")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.SPAWN, Collections.singletonList(CommandLiteral.SPAWN));
+                    executeSpongeCommand(ctx, CommandLiteral.SPAWN, List.of());
                     return CommandResult.success();
                 })
                 .build();
@@ -246,7 +236,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.START);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     ctx.one(Parameter.key(CommandLiteral.SHAPE, String.class)).ifPresent(args::add);
                     ctx.one(Parameter.key(CommandLiteral.X, String.class)).ifPresent(args::add);
@@ -270,7 +259,6 @@ public class ChunkySponge {
                 .terminal(true)
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.TRIM);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     ctx.one(Parameter.key(CommandLiteral.SHAPE, String.class)).ifPresent(args::add);
                     ctx.one(Parameter.key(CommandLiteral.X, String.class)).ifPresent(args::add);
@@ -284,7 +272,7 @@ public class ChunkySponge {
         final Command.Parameterized worldborderCommand = Command.builder()
                 .permission("chunky.command.worldborder")
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.WORLDBORDER, Collections.singletonList(CommandLiteral.WORLDBORDER));
+                    executeSpongeCommand(ctx, CommandLiteral.WORLDBORDER, List.of());
                     return CommandResult.success();
                 })
                 .build();
@@ -293,7 +281,6 @@ public class ChunkySponge {
                 .addParameters(Parameter.world().key(CommandLiteral.WORLD).build())
                 .executor(ctx -> {
                     final List<String> args = new ArrayList<>();
-                    args.add(CommandLiteral.WORLD);
                     ctx.one(Parameter.key(CommandLiteral.WORLD, ServerWorld.class)).map(ServerWorld::key).map(ResourceKey::asString).ifPresent(args::add);
                     executeSpongeCommand(ctx, CommandLiteral.WORLD, args);
                     return CommandResult.success();
@@ -321,15 +308,14 @@ public class ChunkySponge {
                 .addChild(worldborderCommand, CommandLiteral.WORLDBORDER)
                 .addChild(worldCommand, CommandLiteral.WORLD)
                 .executor(ctx -> {
-                    executeSpongeCommand(ctx, CommandLiteral.HELP, Collections.emptyList());
+                    executeSpongeCommand(ctx, CommandLiteral.HELP, List.of());
                     return CommandResult.success();
                 })
                 .build(), CommandLiteral.CHUNKY);
     }
 
     private void executeSpongeCommand(final CommandContext ctx, final String command, final List<String> args) {
-        final String[] argsArray = new String[args.size()];
-        chunky.getCommands().get(command).execute(new SpongeSender(ctx.cause().root()), args.toArray(argsArray));
+        chunky.getCommands().get(command).execute(new SpongeSender(ctx.cause().root()), CommandArguments.of(args));
     }
 
     public Chunky getChunky() {
